@@ -1,5 +1,6 @@
 # -*- coding: utf-8 -*-
 from AccessControl import ClassSecurityInfo
+from Products.CMFCore.utils import getToolByName
 from Products.Archetypes import atapi
 from Products.CMFPlone.interfaces import INonStructuralFolder
 from zope.interface import implements
@@ -47,32 +48,47 @@ class Attachmentsmixin(atapi.OrderedBaseFolder):
 
     schema = Attachmentsmixin_schema
 
-    def getFirstImage(self):
+    def get_first_image(self):
         """ Return first image attached to this content item
         """
-        images = self.getImages()
+        images = self.get_images()
         if len(images) > 0:
             return images[0]
 
     def has_image(self):
-        if self.getFirstImage() is not None:
+        """ Return True if we find a first image.
+        """
+        if self.get_first_image() is not None:
             return True
         return False
 
-    def getImages(self):
+    def get_images(self):
         """ return a list of images attached to this content item
         """
-        return self.contentValues(filter=dict(portal_type='ImageAttachment'))
+        catalog = getToolByName(self, 'portal_catalog')
+        brains = catalog.searchResults(
+            portal_type='ImageAttachment',
+            path={'query': '/'.join(self.getPhysicalPath()),
+                  'depth': 1},
+            sort_on='getObjPositionInParent')
+        return [brain.getObject() for brain in brains]
 
-
-    def getAttachments(self):
+    def get_attachments(self):
         """ return a list of images attached to this item
         """
-        return self.contentValues(filter=dict(portal_type='FileAttachment'))
+        catalog = getToolByName(self, 'portal_catalog')
+        brains = catalog.searchResults(
+            portal_type='FileAttachment',
+            path={'query': '/'.join(self.getPhysicalPath()),
+                  'depth': 1},
+            sort_on='getObjPositionInParent')
+        return [brain.getObject() for brain in brains]
 
     def SearchableText(self, **kwargs):
+        """ Add the contents of SearchableText to the Advise
+        """
         result = super(atapi.OrderedBaseFolder, self).SearchableText()
-        for attachment in self.getAttachments():
+        for attachment in self.get_attachments():
             result += attachment.SearchableText()
         return result
 
